tests/models/struct/unnamed/f32/fail/min_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_items = 2)]
    f32
);
fn main() {}
